Bug 1226176 - Compute retained sizes in dominator trees and expose them to JavaScript; r=bz,sfink